single channel model loading is now working as well

--- a/notebooks/load_checkpoints.ipynb
+++ b/notebooks/load_checkpoints.ipynb
@@ -19,7 +19,8 @@
    "source": [
     "single_ckpt_path = './runs/0504out_dim5proj_dim5batch-size512lr0.0003epochs800fp16use_gptis_causaln_embd32add_train/checkpoint.pth'\n",
     "multi_ckpt_path = './ddp_models/0502_mc_gpt_conseq_causal_nembd64_block1331_bs128_extra5_lr0.0001_knn10_addtrain/checkpoint.pth'\n",
-    "data_path='/home/gridsan/cloh/spike_data/multi_dy016_random_neurons_04_28_2023'\n"
+    "multi_data_path='/home/gridsan/cloh/spike_data/multi_dy016_random_neurons_04_28_2023'\n",
+    "single_data_path='/home/gridsan/cloh/spike_data/single_dy016_random_neurons_04_28_2023'\n"
    ]
   },
   {
@@ -80,13 +81,13 @@
     }
    ],
    "source": [
-    "train_loader = get_dataloader(data_path, multi_chan=True, split='train')\n",
-    "test_loader = get_dataloader(data_path, multi_chan=True, split='test')\n"
+    "train_loader = get_dataloader(multi_data_path, multi_chan=True, split='train')\n",
+    "test_loader = get_dataloader(multi_data_path, multi_chan=True, split='test')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "56637e08-defe-42c7-aa94-49b48450efe7",
    "metadata": {},
    "outputs": [],
@@ -163,10 +164,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "79bdd89f-6ec8-45e4-bf83-59381c278fa4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "number of parameters: 0.99M\n",
+      "missing keys []\n",
+      "unexpected keys ['projector.proj_block.0.weight', 'projector.proj_block.0.bias', 'projector.proj_block.2.weight', 'projector.proj_block.2.bias', 'projector.proj_block.4.weight', 'projector.proj_block.4.bias', 'online_head.weight', 'online_head.bias']\n",
+      "knn if rep BEFORE proj: 98.33333333333333\n"
+     ]
+    }
+   ],
    "source": [
     "model2 = load_ckpt(multi_ckpt_path, multi_chan = True, rep_after_proj=False)\n",
     "knn_score = knn_monitor(net=model2.cuda(), memory_data_loader=train_loader, test_data_loader=test_loader, device='cuda',k=200, hide_progress=True, multi_chan=True)\n",
@@ -175,11 +207,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e19e714d-61aa-4d3d-b0ad-5cdcad1dfdeb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "Using projector; batchnorm False with depth 3; hidden_dim=512\n",
+      "number of parameters: 0.52M\n",
+      "missing keys ['backbone.projector.proj_block.0.weight', 'backbone.projector.proj_block.0.bias', 'backbone.projector.proj_block.2.weight', 'backbone.projector.proj_block.2.bias', 'backbone.projector.proj_block.4.weight', 'backbone.projector.proj_block.4.bias']\n",
+      "unexpected keys ['projector.proj_block.0.weight', 'projector.proj_block.0.bias', 'projector.proj_block.2.weight', 'projector.proj_block.2.bias', 'projector.proj_block.4.weight', 'projector.proj_block.4.bias']\n",
+      "False spikes_train.npy\n",
+      "(12000, 121)\n",
+      "(3000, 121)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Single channel\n",
+    "\n",
+    "model = load_ckpt(single_ckpt_path, multi_chan = False, rep_after_proj=False)\n",
+    "single_train_loader = get_dataloader(single_data_path, multi_chan=False, split='train')\n",
+    "single_test_loader = get_dataloader(single_data_path, multi_chan=False, split='test')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "17293f10-c760-4398-9ca6-334672fee879",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Single channel; knn rep BEFORE proj: 83.73333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_score = knn_monitor(net=model.cuda(), memory_data_loader=single_train_loader, test_data_loader=single_test_loader, device='cuda',k=200, hide_progress=True, multi_chan=False)\n",
+    "print(\"Single channel; knn rep BEFORE proj:\", knn_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "16da9a14-3a68-4313-bcc6-3b3cd9d8f415",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "WARNING: using slow attention. Flash Attention requires PyTorch >= 2.0\n",
+      "Using projector; batchnorm False with depth 3; hidden_dim=512\n",
+      "number of parameters: 0.52M\n",
+      "Using projector; batchnorm False with depth 3; hidden_dim=512\n",
+      "missing keys ['backbone.projector.proj_block.0.weight', 'backbone.projector.proj_block.0.bias', 'backbone.projector.proj_block.2.weight', 'backbone.projector.proj_block.2.bias', 'backbone.projector.proj_block.4.weight', 'backbone.projector.proj_block.4.bias']\n",
+      "unexpected keys []\n"
+     ]
+    }
+   ],
+   "source": [
+    "model2 = load_ckpt(single_ckpt_path, multi_chan = False, rep_after_proj=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "579f8cdc-0f4b-4ffb-95b6-ef9c977c004f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Single channel; knn rep AFTER proj: 73.66666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_score = knn_monitor(net=model2.cuda(), memory_data_loader=single_train_loader, test_data_loader=single_test_loader, device='cuda',k=200, hide_progress=True, multi_chan=False)\n",
+    "print(\"Single channel; knn rep AFTER proj:\", knn_score)"
+   ]
   }
  ],
  "metadata": {
