updated wflab dataset

--- a/notebooks/load_checkpoints.ipynb
+++ b/notebooks/load_checkpoints.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "11cee4b3-6ac2-42fb-a4fb-5ca95e4bcc0a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from load_models import load_ckpt, get_dataloader"
@@ -14,20 +16,32 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "7e84aebc-e318-4041-b296-01b267f891b3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "single_ckpt_path = './runs/0504out_dim5proj_dim5batch-size512lr0.0003epochs800fp16use_gptis_causaln_embd32add_train/checkpoint.pth'\n",
-    "multi_ckpt_path = './ddp_models/0502_mc_gpt_conseq_causal_nembd64_block1331_bs128_extra5_lr0.0001_knn10_addtrain/checkpoint.pth'\n",
+    "multi_ckpt_path = '/moto/stats/users/ch3676/spike_ddp_models_0504/0502_mc_gpt_conseq_causal_nembd64_block1331_bs128_extra5_lr0.0001_knn10_addtrain/checkpoint.pth'\n",
     "multi_data_path='/home/gridsan/cloh/spike_data/multi_dy016_random_neurons_04_28_2023'\n",
     "single_data_path='/home/gridsan/cloh/spike_data/single_dy016_random_neurons_04_28_2023'\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5bcfe23c-2062-4926-8db4-65aa63b7fdb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "639e082c-b0ba-403f-b768-a1a2dbc65c00",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -61,7 +75,7 @@
     }
    ],
    "source": [
-    "model = load_ckpt(multi_ckpt_path, multi_chan = True, rep_after_proj=True)\n"
+    "model = load_ckpt(multi_ckpt_path, multi_chan = True, rep_after_proj=True)"
    ]
   },
   {
@@ -350,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
