--- a/notebooks/data_gen.ipynb
+++ b/notebooks/data_gen.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "500f59b0-1398-49cd-82d2-a177c2b64d26",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "d01b35ea",
    "metadata": {
     "tags": []
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "732eee74",
    "metadata": {
     "tags": []
@@ -48,10 +57,10 @@
    "outputs": [],
    "source": [
     "from matplotlib.gridspec import GridSpec\n",
-    "# from brainbox.io.one import SpikeSortingLoader\n",
-    "# from ibllib.atlas import AllenAtlas\n",
-    "# from one.api import ONE\n",
-    "# import brainbox.io.one as bbone\n",
+    "from brainbox.io.one import SpikeSortingLoader\n",
+    "from ibllib.atlas import AllenAtlas\n",
+    "from one.api import ONE\n",
+    "import brainbox.io.one as bbone\n",
     "import numpy as np\n",
     "import datetime\n",
     "from spike_psvae.subtract import read_geom_from_meta\n",
@@ -62,7 +71,7 @@
     "import torch\n",
     "from spike_psvae.spikeio import read_waveforms\n",
     "\n",
-    "from analysis.data_gen_utils import make_dataset, extract_real, extract_sim"
+    "from analysis.data_gen_utils import make_dataset, extract_IBL, extract_sim"
    ]
   },
   {
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "028787de",
    "metadata": {},
    "outputs": [],
@@ -99,7 +108,7 @@
     "real_bin_path = '/Users/ankit/Documents/PaninskiLab/spike-psvae/notebook/destriped__spikeglx_ephysData_g0_t0.imec0.ap.stream.cbin'\n",
     "meta_file = '/Users/ankit/Documents/PaninskiLab/spike-psvae/notebook/destriped__spikeglx_ephysData_g0_t0.imec0.ap.stream.meta'\n",
     "pid = 'dab512bd-a02d-4c1f-8dbc-9155a163efc0'\n",
-    "real_spike_idx, real_geom, chan_idx, temps = extract_real(real_bin_path, meta_file, pid, [200, 500])\n",
+    "real_spike_idx, real_geom, chan_idx, temps = extract_IBL(real_bin_path, meta_file, pid, [200, 500])\n",
     "selected_real_units = [9, 11, 13, 65, 79, 82, 267, 258, 318, 329]"
    ]
   },
@@ -134,8 +143,8 @@
     "real_bin_path = '/Users/ankit/Documents/PaninskiLab/spike-psvae/notebook/destriped__spikeglx_ephysData_g0_t0.imec0.ap.stream.cbin'\n",
     "meta_file = '/Users/ankit/Documents/PaninskiLab/spike-psvae/notebook/destriped__spikeglx_ephysData_g0_t0.imec0.ap.stream.meta'\n",
     "pid = 'febb430e-2d50-4f83-87a0-b5ffbb9a4943'\n",
-    "real_spike_idx, real_geom, chan_idx, temps = extract_real(real_bin_path, meta_file, pid, [0, 600])\n",
-    "selected_real_units = [9, 11, 13, 65, 79, 82, 267, 258, 318, 329]\n"
+    "real_spike_idx, real_geom, chan_idx, temps = extract_IBL(real_bin_path, meta_file, pid, [0, 600])\n",
+    "selected_real_units = [9, 11, 13, 65, 79, 82, 267, 258, 318, 329]"
    ]
   }
  ],
